2014-10-13  David B. Lamkins  <david@lamkins.net>

	* help.c (show_manuals): Manuals window is the same size as other
	APLwrap windows.

	* edit.h (): Offer to save dirty file edit buffers while quitting.

	* apl.h (): Offer to save dirty file edit buffers while quitting.

	* edit.c (edit_delete_real, check_modified_and_save)
	(save_dirty_edit_buffers): Offer to save dirty file edit buffers
	while quitting.

	* apl.c (is_quitting, aplwrap_quit): Offer to save dirty file edit
	buffers while quitting.

2014-10-12  David B. Lamkins  <david@lamkins.net>

	* edit.c (update_status, set_status_line, edit_close): Fix crash
	when closing edit window.

	* edit.h (): When saving a buffer under a different name, existing
	buffers with that name adopt the new content.

	* edit.c (set_status_line, update_name_and_status)
	(edit_save_object_cb, edit_save_file_as, edit_object, edit_file):
	When saving a buffer under a different name, existing buffers with
	that name adopt the new content.

	* apl.c (aplwrap_quit): For now, disable the dirty-buffer check on
	exit.

	* edit.c (update_name, edit_object, edit_file): Update edit
	windows with new content upon renaming another edit window to a
	matching name or path.

	* menu.c (names_cb): Fix failed assertion upon closing empty Open
	Object window.

	* edit.h (): Synchronize cloned	editor windows.

	* edit.c (update_status, update_name, edit_mark_set_event)
	(edit_close, edit_save_object_cb, edit_save_file)
	(edit_save_file_as, edit_revert_function_cb)
	(edit_revert_variable_cb, edit_revert, build_edit_menubar)
	(edit_key_press_event, edit_object, edit_file): Synchronize cloned
	editor windows. Assign Ctrl-L keyboard accelerator to Clone. Fix
	some memory leaks.

	* edit.c (edit_save_object_cb): Back out window title sync.
	Cloning needs rework.

2014-10-11  David B. Lamkins  <david@lamkins.net>

	* edit.c (edit_save_object_cb): Update editor window title upon
	saving function.
